<resources>
    <string name="app_name">Leisure Helper</string>

    <string-array name="Type">
        <item>random</item>
        <item>education</item>
        <item>recreational</item>
        <item>social</item>
        <item>diy</item>
        <item>charity</item>
        <item>cooking</item>
        <item>relaxation</item>
        <item>music</item>
        <item>busywork</item>
    </string-array>

    //Activity requirements display
    <string name="lowest_cost_string">Free</string>
    <string name="price_sign_string">$</string>
    <string name="price_string">Price</string>
    <string name="accessibility_string">Accessibility</string>
    <string name="participants_string">Participants</string>
    <string name="activity_null_string">Sorry, there are no activity, that meets your requirements.</string>

    //Button names
    <string name="next_button_string">Next</string>
    <string name="skip_button_string">Skip</string>

    //Icons names
    <string name="category_string">Category</string>
    <string name="link_string">Link</string>

    //Image description
    <string name="favourites_description_string">favourites view</string>
    <string name="participants_description_string">participants icon</string>
    <string name="accessibility_description_string">accessibility icon</string>

    //Intro ViewPager text
    <string name="vp_page1_string">Welcome to the Leisure Helper!</string>
    <string name="vp_page2_string">Find out how to spend your free time!</string>
    <string name="vp_page3_string">Let\'s Begin!</string>

    //BNB
    <string name="bnb_home_string">Home</string>
    <string name="bnb_fav_string">Favorites</string>
    <string name="bnb_settings_string">Settings</string>

    //Random
    <string name="random">random</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
