<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".presentation.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_window"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/lt_main_window"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/category"
            style="@style/header_text"
            android:layout_width="118dp"
            android:background="@drawable/lt_category"
            android:text="@string/category_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/link"
            style="@style/header_text"
            android:layout_width="60dp"
            android:background="@drawable/lt_category"
            android:text="@string/link_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_text"
            style="@style/action_text_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text=""
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.like.LikeButton
            android:id="@+id/favourite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:icon_size="25dp"
            app:icon_type="heart"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/price"
            style="@style/presentational_text"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/price_sign_string"
            android:textSize="23sp"
            app:layout_constraintBottom_toTopOf="@id/fav_price_undrln"
            app:layout_constraintEnd_toEndOf="@id/fav_price_undrln"
            app:layout_constraintStart_toStartOf="@id/fav_price_undrln" />

        <TextView
            android:id="@+id/fav_price_undrln"
            style="@style/underline_text"
            android:text="@string/price_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fav_participants_undrln" />

        <ImageView
            android:id="@+id/person"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/lt_icons"
            android:contentDescription="@string/participants_description_string"
            android:src="@drawable/ic_person"
            app:layout_constraintBottom_toTopOf="@id/fav_participants_undrln"
            app:layout_constraintEnd_toEndOf="@id/fav_participants_undrln"
            app:layout_constraintStart_toStartOf="@id/fav_participants_undrln" />

        <TextView
            android:id="@+id/fav_participants_undrln"
            style="@style/underline_text"
            android:text="@string/participants_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/fav_price_undrln"
            app:layout_constraintRight_toLeftOf="@id/fav_accessibility_undrln" />

        <!--
                _________________
        -->

        <ImageView
            android:id="@+id/access"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/lt_icons"
            android:contentDescription="@string/accessibility_description_string"
            android:src="@drawable/ic_acc_empty"
            app:layout_constraintBottom_toTopOf="@id/fav_accessibility_undrln"
            app:layout_constraintEnd_toEndOf="@id/fav_accessibility_undrln"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/fav_accessibility_undrln" />

        <TextView
            android:id="@+id/fav_accessibility_undrln"
            style="@style/underline_text"
            android:text="@string/accessibility_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/fav_participants_undrln"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_next_idea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/lt_button"
        android:includeFontPadding="false"
        android:text="@string/next_button_string"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/main_window" />


    <TextView
        android:id="@+id/list_name"
        style="@style/above_text"
        android:layout_margin="2dp"
        android:text="@string/category_string"
        app:layout_constraintBottom_toTopOf="@id/list"
        app:layout_constraintStart_toStartOf="@id/list" />

    <Spinner
        android:id="@+id/list"
        android:layout_width="130dp"
        android:layout_height="37dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/lt_spinner"
        android:popupBackground="?attr/spinner_color"
        android:entries="@array/Type"
        android:theme="?attr/spinner_color"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="@id/seek_bar_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/seek_bar_1" />

    <!--============-->

    <TextView
        android:id="@+id/seek_bar_1_name"
        style="@style/above_text"
        android:layout_margin="2dp"
        android:text="@string/price_string"

        app:layout_constraintBottom_toTopOf="@id/seek_bar_1"
        app:layout_constraintStart_toStartOf="@id/seek_bar_1" />

    <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
        android:id="@+id/seek_bar_1"
        style="@style/seek_bar"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@id/seek_bar_2"
        app:layout_constraintLeft_toRightOf="@id/list"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_next_idea"
        app:max_value="0.8"
        app:min_value="0.0"/>

    <!--============-->

    <TextView
        android:id="@+id/seek_bar_2_name"
        style="@style/above_text"
        android:layout_margin="2dp"
        android:text="@string/accessibility_string"
        app:layout_constraintBottom_toTopOf="@id/seek_bar_2"
        app:layout_constraintStart_toStartOf="@id/seek_bar_2" />

    <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
        android:id="@+id/seek_bar_2"
        style="@style/seek_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/seek_bar_1"
        app:layout_constraintTop_toBottomOf="@id/seek_bar_1"
        android:layout_marginTop="10dp"
        app:max_value="1.00"
        app:min_value="0.00"/>


</androidx.constraintlayout.widget.ConstraintLayout>